fix: color contrast issue

--- a/src/ui/src/components/visualizer/expandable_info_text.scss
+++ b/src/ui/src/components/visualizer/expandable_info_text.scss
@@ -191,7 +191,7 @@
 
     &::before {
       clip-path: inset(0 calc(100% - var(--percentage)) 0 0);
-      color: white;
+      color: #00639b;
       background: #d7f1ff;
     }
 
